--- a/style.less
+++ b/style.less
@@ -840,7 +840,7 @@ svg {
             list-style: none;
         }
 
-        
+
 
 
 
@@ -1500,20 +1500,23 @@ svg {
 
 /* User Page */
 
+.content.col-md-9 {
+    .title {
+        display: none;
+    }
+}
 
 .profile_column_left {
 
     .profile_avatar {
-        float: left;
-        box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.48);
+        box-shadow: 0 0 0;
         border: 0;
         padding: 0;
-        margin: 0;
-        margin-right: 2em;
 
         img {
             width: 178px;
             height: 178px;
+            box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.48);
         }
 
     }
@@ -1531,8 +1534,7 @@ svg {
     h2 {
         color: #666;
         font-weight: 300;
-
-        padding: .4em 0 1.4em;
+        padding: .4em 0 0.4em;
         margin: 0;
     }
 
