--- a/style.less
+++ b/style.less
@@ -379,130 +379,130 @@ big {
 
 
 
-    input[type="checkbox"],
-    input[type="radio"] {
-        padding: 0;
-    }
+input[type="checkbox"],
+input[type="radio"] {
+    padding: 0;
+}
 
-    input[type="search"] {
-        -webkit-appearance: textfield; 
-    }
+input[type="search"] {
+    -webkit-appearance: textfield; 
+}
 
-    input[type="search"]::-webkit-search-decoration { 
-        -webkit-appearance: none;
-    }
+input[type="search"]::-webkit-search-decoration { 
+    -webkit-appearance: none;
+}
 
-    input[type="text"],
-    input[type="email"],
-    input[type="url"],
-    input[type="password"],
-    input[type="search"],
-    textarea {
-        color: #666;
-        outline: none;
-        padding: 1em;
-        width: 100%;
-        outline: 0;
-        height: auto;
-        border: 0;
-        border-radius: 2px;
-        background: #fff;
-        box-shadow: 0 2px 5px -1px rgba(0,0,0,.6);
-    }
+input[type="text"],
+input[type="email"],
+input[type="url"],
+input[type="password"],
+input[type="search"],
+textarea {
+    color: #666;
+    outline: none;
+    padding: 1em;
+    width: 100%;
+    outline: 0;
+    height: auto;
+    border: 0;
+    border-radius: 2px;
+    background: #fff;
+    box-shadow: 0 2px 5px -1px rgba(0,0,0,.6);
+}
 
-    input[type="text"]:focus,
-        input[type="email"]:focus,
-        input[type="url"]:focus,
-        input[type="password"]:focus,
-        input[type="search"]:focus,
-        textarea:focus {
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="password"]:focus,
+input[type="search"]:focus,
+textarea:focus {
 
-    }
+}
 
-    input[type="text"],
-    input[type="email"],
-    input[type="url"],
-    input[type="password"],
-    input[type="search"] {
-        padding: 0.8em;
-        width: 100%;
-    }
+input[type="text"],
+input[type="email"],
+input[type="url"],
+input[type="password"],
+input[type="search"] {
+    padding: 0.8em;
+    width: 100%;
+}
 
-    textarea {
-        overflow: auto; 
-        padding: 1em;
-        vertical-align: top; 
-        width: 100%;
-    }
+textarea {
+    overflow: auto; 
+    padding: 1em;
+    vertical-align: top; 
+    width: 100%;
+}
 
-    button,
-    input,
-    select,
-    textarea {
-        font-size: 100%; /* Corrects font size not being inherited in all browsers */
-        margin: 0; /* Addresses margins set differently in IE6/7, F3/4, S5, Chrome */
-        vertical-align: baseline; /* Improves appearance and consistency in all browsers */
-    }
-
-
-    /* Alert Message */
-
-    .alert-dismissable .close, .alert-dismissible .close {
-        position: relative;
-        top: 0;
-        right: -28px;
-        color: inherit;
-        display: block;
-        margin: 0;
-        background: 0 0;
-        font-size: 1.6em;
-        line-height: 0;
-    }
-
-    .alert-success {
-        border: 0;
-        border-radius: 0;
-        color: #222;
-    }
+button,
+input,
+select,
+textarea {
+    font-size: 100%; /* Corrects font size not being inherited in all browsers */
+    margin: 0; /* Addresses margins set differently in IE6/7, F3/4, S5, Chrome */
+    vertical-align: baseline; /* Improves appearance and consistency in all browsers */
+}
 
 
-    button,
-    input[type="button"],
-    input[type="reset"],
-    input[type="submit"] {
-        cursor: pointer;
-        padding: 14px 16px;
-        display: inline-block;
-        text-transform: uppercase;
-        font-weight: 500;
-        font-size: 1em;
-        color: @primarycolor;
-        margin: 1em 0 0;
-        background: transparent;
-        outline: 0;
-        letter-spacing: 0.6px;
-        border: 0;
-        border-radius: 0;
-    }
+/* Alert Message */
+
+.alert-dismissable .close, .alert-dismissible .close {
+    position: relative;
+    top: 0;
+    right: -28px;
+    color: inherit;
+    display: block;
+    margin: 0;
+    background: 0 0;
+    font-size: 1.6em;
+    line-height: 0;
+}
+
+.alert-success {
+    border: 0;
+    border-radius: 0;
+    color: #222;
+}
+
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+    cursor: pointer;
+    padding: 14px 16px;
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 1em;
+    color: @primarycolor;
+    margin: 1em 0 0;
+    background: transparent;
+    outline: 0;
+    letter-spacing: 0.6px;
+    border: 0;
+    border-radius: 0;
+}
 
 
 
-    input[type="button"]:hover,
-        input[type="reset"]:hover,
-        input[type="submit"]:hover {
-        background: @linkcolor;
-    }
+input[type="button"]:hover,
+input[type="reset"]:hover,
+input[type="submit"]:hover {
+    background: @linkcolor;
+}
 
 
-    input[type="button"]:focus,
-        input[type="reset"]:focus,
-        input[type="submit"]:focus,
-        button:active,
-        input[type="button"]:active,
-        input[type="reset"]:active,
-        input[type="submit"]:active {
-        outline: 0;
-    }
+input[type="button"]:focus,
+input[type="reset"]:focus,
+input[type="submit"]:focus,
+button:active,
+input[type="button"]:active,
+input[type="reset"]:active,
+input[type="submit"]:active {
+    outline: 0;
+}
 
 
 
@@ -523,7 +523,7 @@ svg {
 
 
 #bg_picture {
-    opacity: 0;
+    opacity: 1;
 
     -webkit-transition: opacity 1s 1s;
     -moz-transition: opacity 1s 1s;
@@ -561,7 +561,7 @@ svg {
     width: 100%;
     height: 100%;
     background: #eee;
-    z-index: 2;
+    z-index: 3;
     position: relative;
 
 
@@ -601,10 +601,10 @@ svg {
                     /* Front Main Widget Aligns */
 
                     .widget {
-                        float: left; /* Default */
+                        float: left;
                         clear: both;
-                        width: 100%;
                         margin: 0;
+                        margin-bottom: 1em;
                     }
 
 
@@ -682,6 +682,8 @@ svg {
     bottom: 0;
     width: 100%;
     z-index: 1000;
+    padding-top: 4em;
+    text-align: center;
     background: rgba(0, 0, 0, 0);
 
     visibility: hidden;
@@ -696,6 +698,8 @@ svg {
         position: relative;
         text-align: center;
         z-index: 2;
+        margin: 0;
+        display: inline-block;
     }
 
 
@@ -711,6 +715,7 @@ svg {
         padding: 2em;
         text-align: left;
         visibility: hidden;
+        opacity: 1;
 
         @sY: 10px;
         @sY2: 10px;
@@ -949,12 +954,7 @@ svg {
 }
 
 
-.main .widget_lists_container {
-    float: left;
-    min-height: 400px;
-    position: relative;
-
-
+.front_main_content  {
 
     .widget_list:hover {
 
@@ -983,16 +983,14 @@ svg {
 
         background: @linkcolor;
 
-
         opacity: 0;
-
 
         -webkit-transition: box-shadow 0.5s;
         -moz-transition: box-shadow 0.5s;
         transition: box-shadow 0.5s;
 
         /*box-shadow: 0px 2px 1px -1px rgba(174, 174, 174, 0.6);*/
-        box-shadow: 0 1px 5px 0px rgba(0,0,0,.4);
+        box-shadow: 0 2px 5px -1px rgba(0,0,0,.4);
 
         >h2 {
             font-weight: 300;
@@ -1015,12 +1013,6 @@ svg {
 
                 -webkit-backface-visibility: hidden;
                 backface-visibility: hidden;
-
-                -webkit-transform: rotate(-90deg);
-                -moz-transform: rotate(-90deg);
-                -ms-transform: rotate(-90deg);
-                -o-transform: rotate(-90deg);
-                transform: rotate(-90deg);
 
                 i {
                     line-height: 0; 
@@ -1053,6 +1045,189 @@ svg {
 
 
 
+/* Tag Cloud Widget */
+
+.widget_core_coll_tag_cloud {
+
+    p.tag_cloud {
+        margin-top: 0.4em;
+        display: inline-block;
+        a {
+            font-size: 1em !important;
+            background: #E5E5E5;
+            border-radius: 2px;
+            padding: 0.4em 0.6em;
+            margin-right: 4px;
+            margin-bottom: 6px;
+            display: inline-block;
+            position: relative;
+        }
+
+
+    }
+
+}
+
+/* Common Links Widget */
+
+.widget_core_coll_common_links {
+
+    ul {
+        list-style: none;
+        margin: 0;
+        li {
+            border: 0;
+            display: inline-block;
+            margin-right: 0.6em;
+            background: #E5E5E5;
+            padding: 0;
+            strong {
+                font-weight: 500; 
+                position: relative;
+                display: inline-block;
+                a {
+                    box-shadow: 0 2px 5px -1px rgba(0,0,0,.4);
+                    padding: 0.6em 1.0em;
+                    display: inline-block;
+                    position: relative;
+                    z-index: 2;
+                }
+            }
+        }
+    }
+
+}
+
+
+/* Current filters Widget */
+
+.widget_core_coll_current_filters {
+    color: transparent;
+    .filter_item {
+        text-shadow: 0 0 0;
+        float: left;
+        clear: both;
+        margin-bottom: 0.4em;
+
+
+        >div {
+            padding: .6em;
+            display: inline-block;
+            height: auto !important;
+            border-radius: 0;
+
+            a {
+                padding: 0;
+                line-height: 19px!important;
+                span {
+                    font-size: 18px;
+
+                }
+            }
+
+        }
+        .icon, .name {
+            color: #222;
+            background: transparent!important;
+        }
+        .icon {
+            padding: .6em 0;
+        }
+
+
+    }
+
+}
+
+
+/* Widget Title Widget */
+
+.widget_core_coll_title {
+    h2 {
+        font-size: 2.2em;
+        margin: 0;
+    }
+}
+
+/* Widget Tagline Widget */
+
+.widget_core_coll_tagline {
+    margin-top:  -0.8em !important;
+}
+
+
+
+/* Log In Widget */
+
+.widget_core_user_login {
+
+    img {
+        border-radius: 4px!important;
+        float: left;
+        z-index: 3;
+        position: relative;
+        margin-right: .8em;
+        margin-bottom: .8em;
+    }
+    strong {
+        margin: .6em 0 0em;
+        font-size: 1.5em;
+        font-weight: 300;
+        text-align: left;
+        z-index: 2;
+        position: relative;
+        float: left;
+        a {
+            font-weight: 300;
+            color: @primarycolor;
+        }
+    }
+
+    p {
+        color: #666 !important;
+        margin: 0em;
+        clear: both;
+        float: left;
+    }
+
+}
+
+
+
+
+
+/* Widget box style */  
+.widget_core_coll_tag_cloud,
+.widget_core_coll_xml_feeds,
+.widget_plugin_evo_Arch, 
+.widget_core_content_hierarchy,
+.widget_core_coll_longdesc,
+.widget_plugin_evo_WhosOnline,
+.widget_core_colls_list_public,
+.widget_core_colls_list_owner,
+.widget_core_user_login,
+.widget_core_user_tools,
+.widget_core_free_html,
+.widget_core_menu_link,
+.widget_core_msg_menu_link,
+.widget_core_coll_current_filters
+{
+
+    box-shadow: 0 2px 5px -1px rgba(0,0,0,.4);
+    padding: 2em;
+    background: @linkcolor;
+    display: inline-block;
+    margin-bottom: 1em!important;
+    min-width: 40%;
+    max-width: 50%;
+    /*--------------*/
+
+    h2 {
+        color: @primarycolor;
+        margin: 0em 0 0.4em;
+    }
+
+}
 
 
 
@@ -1063,11 +1238,51 @@ svg {
 
 
 
+/* Photo Index Widget */
 
 
+.widget_core_coll_media_index {
+
+    .widget_grid {
+        width: 100%;
+        position: relative;
+        display: inline-block;
+
+        tbody {
+            width: 100%;
+            display: inline-block;
+
+            tr {
+                width: 100%;
+                display: inline-block;
+                margin-bottom: -10px;
+
+                td {
+                    padding: 0;
+                    background-color: transparent; 
+                    border: 0; 
+                    vertical-align: top;
+                    margin: 0;
+                    position: relative;
+
+                    img {
+                        width: 100%;
+                        height: auto;
+                        max-width: 100%;
+                    }
+
+                    .circle-1 {
+                        fill: rgba(249, 249, 249, 0.3);
+                        position: relative;
+                    }
+
+                }
+            }
+        }
+    }
 
 
-
+}
 
 
 
@@ -1076,10 +1291,6 @@ svg {
 
 
 /* Social Icons */
-
-
-
-
 
 body .main .widget--social-media-links {
     margin-top: 15px;
@@ -1321,11 +1532,16 @@ body .main .widget--social-media-links {
         h2 {
             padding: 0 0 0.6em;
             margin: 0 !important;
-            color: #000!important;
+            color: @primarycolor;
             box-shadow: 0 0 0;
+            margin: 0;
+            border: 0;
+            background: transparent !important;
         }
 
     }
+
+
 
 
     .widget_plugin_evo_Calr {
@@ -1348,7 +1564,6 @@ body .main .widget--social-media-links {
         margin: 0;
         li {
             a { 
-                padding: 1em;
                 display: inline-block;
                 font-size: 2.3em;
                 font-weight: 300;
@@ -1368,18 +1583,7 @@ body .main .widget--social-media-links {
 
 }
 
-/* Long Description */
 
-.widget_core_coll_longdesc {
-
-    h2 {
-        margin: 0;
-        border: 0;
-        padding: 1em;
-        background: transparent !important;
-        color: #000 !important;
-    }
-}
 
 
 
@@ -1763,24 +1967,25 @@ body .main .widget--social-media-links {
             a {
                 position: relative;
                 display: inline-block;
-                button {
-                    background: rgba(233, 233, 233, 1)!important;
 
-                    font-weight: 400 !important;
-                    margin-top: 0 !important;
-
-                    box-shadow: 0 2px 4px 0 rgba(0,0,0,.48);
-                }
 
             }
 
             button {
-                background: rgba(233, 233, 233, 1)!important;
+                background: #E5E5E5!important;
 
                 font-weight: 400 !important;
                 margin-top: 0 !important;
 
                 box-shadow: 0 2px 4px 0 rgba(0,0,0,.48);
+
+                border: 0;
+                outline: 0;
+                border-radius: 0;
+                font-size: 1em;
+                cursor: pointer;
+                padding: 14px 16px;
+                display: inline-block;
             }
 
             .circle-1 {
@@ -1991,7 +2196,7 @@ body .main .widget--social-media-links {
 
 .footer.main {
 
-    z-index: 1;
+    z-index: 3;
     position: relative;
 
     .container .row .col-md-12 {
@@ -2045,54 +2250,6 @@ body .main .widget--social-media-links {
     }
 
 
-
-
-
-
-
-
-    .widget_core_coll_media_index {
-
-        .widget_grid {
-            width: 100%;
-            position: relative;
-            display: inline-block;
-
-            tbody {
-                width: 100%;
-                display: inline-block;
-
-                tr {
-                    width: 100%;
-                    display: inline-block;
-                    margin-bottom: -10px;
-
-                    td {
-                        padding: 0;
-                        background-color: #fff; 
-                        border: 0; 
-                        vertical-align: top;
-                        margin: 0;
-                        position: relative;
-
-                        img {
-                            width: 100%;
-                            height: auto;
-                            max-width: 100%;
-                        }
-
-                        .circle-1 {
-                            fill: rgba(249, 249, 249, 0.3);
-                            position: relative;
-                        }
-
-                    }
-                }
-            }
-        }
-
-
-    }
 
 
 
@@ -2401,7 +2558,7 @@ body.pictured {
     }
 }
 #bg_picture {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -2412,7 +2569,6 @@ body.pictured {
     background-position: center center;
     z-index: -999999;
     img {
-        display: none;
         width: 100%;
     }
 }
